# vroom

./: .craft.yml  .dockerignore  .gitignore  .golangci.yml  .pre-commit-config.yaml  Brewfile  CHANGELOG.md  Dockerfile  LICENSE  LICENSE.md  Makefile  README.md  cloudbuild.yaml  config.example.yml  docker-entrypoint.sh  go.mod  go.sum  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: cd.yml  changelog.yaml  ci.yaml  ci.yml  codeql.yaml  codeql.yml  image.yaml  lint-deployment-pipelines.yaml  lint-deployment-pipelines.yml  release-ghcr-version-tag.yaml  release.yaml  release.yml  validate-pipelines.yaml  validate-pipelines.yml
chart/: Chart.yaml  values.yaml
chart/charts/: common-0.1.0.tgz
chart/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml  serviceaccount.yaml
cmd/cleanup/: README.md  cleanup.go
cmd/downloader/: README.md  main.go
cmd/functions/: main.go
cmd/issuedetection/: main.go
cmd/vroom/: call_tree.go  calltree.go  chunk.go  chunk_test.go  config.go  flamegraph.go  functions.go  kafka.go  main.go  metrics.go  profile.go  profiles_stats.go  regressed.go  transaction.go  utils.go  utils_test.go
deployments/: deploy.sh  docker-compose.yml
devenv/: sync.py
devservices/: config.yml
gocd/pipelines/: cd.yaml
gocd/templates/: jsonnetfile.json  jsonnetfile.lock.json  vroom.jsonnet
internal/aggregate/: aggregator.go  androidtrace.go  backtrace.go  merge.go  profile.go  query.go  registry.go  sample.go  sample_test.go  (+1 more)
scripts/: build.sh  bump-version.sh  deploy.sh  make_python_stdlib.py  run.sh
(+148 files in other folders)
