[project]
name = "vroom"
# we only have this here to make uv happy
# we use uv for dependency management, not packaging
version = "0.0.0"

[dependency-groups]
dev = [
    "devservices>=1.2.1",
    "pre-commit>=4.2.0",
    "sentry-devenv>=1.22.2",
]

[tool.uv]
environments = ["sys_platform == 'darwin' or sys_platform == 'linux'"]

[[tool.uv.index]]
url = "https://pypi.devinfra.sentry.io/simple"
default = true
